Fix v2 chat manager for empty items